--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   fluttertoast: ^8.2.6
+  sqflite: ^2.3.3+1
+  path_provider: ^2.1.3
+  sqflite_common_ffi: ^2.3.3
+  sqflite_common_ffi_web: ^0.4.3+1
 
 dev_dependencies:
   flutter_test:
